# matekbd-keyboard-display

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md
data/: CMakeLists.txt  matekbd-keyboard-display.desktop
man/: CMakeLists.txt  matekbd-keyboard-display.1
src/: CMakeLists.txt  matekbd-keyboard-display.c
